--- a/app/src/main/res/layout/cosa_layout.xml
+++ b/app/src/main/res/layout/cosa_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,12 +9,27 @@
         android:id="@+id/label_nombreCosa"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/labelNombre"/>
+        android:layout_marginStart="8dp"
+        android:text="@string/labelNombre" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/label_precioCosa"
-        android:text="@string/labelPrecio"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/label_nombreCosa"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/labelPrecio"
+        android:layout_alignParentEnd="true"/>
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/label_numSerie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/label_nombreCosa"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="2dp"
+        android:text="@string/labelSerie"
+        android:textSize="12sp" />
+
+</RelativeLayout>
